@@ -4,6 +4,7 @@ Release date:
 * Enhancement: Promo Box - Added option to show icon above or below content
 * Enhancement: Interactive Circle - Added an option to use image as tab icon
 * Fix: Image Accordion - Dynamic links support for URL field
+* Fix: Image Scroll - Fixed JS error with scroll trigger
 
 == 2.9.1 ==
 Release date: March 26, 2025
